oops i don't psr-4 good

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mrkrstphr/obit-scraper",
     "autoload": {
         "psr-4": {
-            "Mrkstphr\\ObitScraper": ["src/"]
+            "Mrkrstphr\\ObitScraper\\": ["src/"]
         }
     },
     "suggest": {
